# c_plusplus

./: Dockerfile  LICENSE  README.md  push.sh
.github/workflows/: build.yaml  main.yml  test.yaml  tests2.yaml
files/: CMakeLists.txt  banner.cxx
files/1-banner.d/: Dockerfile  README.md
files/1-banner.d/test/: Banner  CMakeCache.txt
files/10-conv-squares.d/: CMakeLists.txt  square.cxx
files/11-floats.d/: CMakeLists.txt  FloatingpointConfig.h.in  floatingpoint.cxx
files/12-limits.d/: CMakeLists.txt  LimitsConfig.h.in  limits.cxx
files/13-dec-to-hex.d/: dectohexsa
files/13-dec-to-hexa.d/: CMakeLists.txt  DectohexaConfig.h.in  dectohexa.cxx
files/14-agentcode.d/: agentcode.cxx
files/16-conv-inch-feet.d/: conv-inch-feet.cxx
files/16-conv-pounds-stone.d/: conv-lbs-pounds.cxx
files/2-kitty.d/: CMakeLists.txt  Dockerfile  README.md  kitty.cxx
files/3-simon.d/: CMakeLists.txt  Dockerfile  README.md  simon.cxx
files/4-fast-cars.d/: CMakeLists.txt  Dockerfile  fast-cars.cxx
files/5-conv-inch-cm/: CMakeLists.txt
files/5-conv-inch-cm.d/: Dockerfile  conv.cxx
files/6-conv-cecl-farh.d/: conv-celc-farh.cxx
files/6-conv-celc-farh.d/: CMakeLists.txt
files/7-conv-cm-ar.d/: CMakeLists.txt  conv-cm-ar.cxx
files/8-conv-pounds-stones.d/: CMakeLists.txt  carrots.cxx
files/9-conv-years-to-months.d/: CMakeLists.txt  conv-ytm.cxx
